# NOTES

./: .dir-locals.el  .gitignore  README.md  [C++]_Binary_Tools.md  [C++]_Context_Sensitivity_of_C.md  [C++]_Declaration_Types.md  [C++]_Smart_Pointer.md  [C++]_Type_Conversion.md  [C++]_Virtual_Method.md  [Clang]_Basics.md  [Compilation]_gcc.md  [Emacs]_Elisp_Introduction.org  [Emacs]_Elisp_Tricks.org  [Java]_Unreachable_Stats.md  [Reading]_Hackers_and_Painters.md  [Reading]_Leading_a_Better_Life.md  [Reading]_傅雷家书.md  [Reading]_冯诺依曼_人类与机器界的天才.md  [Scala]_Call_By_Value_Name.md  [Scala]_Function_and_Method.md  [Shell]_Learning_Shell_Scripting_with_Zsh.md  [Shell]_MISC.md  [Shell]_MacOSX_Tools.md  [Shell]_Network_Tool_List.md  [Shell]_Zsh.md  [Shell]_Zsh_KungFu.md  [Unix]Systemd.md  [Unix]_Debian_Setup.md  [Unix]_End_of_World.md  [Unix]_Systemd.md  [Vim]_MustReads.md  [Vim]_Practical_Vim.md  [Vim]_Shortcuts.md  [ipynb]_Shortcuts.md  rename.py
MISC/: elispintro.org  klee.org  practical_vim.md  writing_gnu_emacs_extension.org
compile/: symbolic_execution.org
compile/autotools/amhello/: Makefile.in  README.md  aclocal.m4  configure  configure.ac
compile/autotools/amhello/lib/: .#Makefile.am  Makefile.am  Makefile.in  say.c  say.h
compile/autotools/amhello/po/: Makevars  POTFILES.in  amhello.pot
compile/autotools/amhello/src/: Makefile.am  Makefile.in  main.c
cpp/: .c-compiler-related.mdown.swp  .gitignore  Fake-RTTI.mdown  Julian-Day.cpp  Memoization.md  big_dog_guard.cpp  c-compiler-related.mdown  context-sensitive-grammar-of-C.md  cpp-gotchas-14.mdown  kmp.c  (+18 more)
(+174 files in other folders)
