AC_INIT([amhello], [3.0], [leftcopy.chx@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_GNU_GETTEXT_VERSION([0.18.1])
AM_GNU_GETTEXT([external])
dnl LT_INIT(disable-static)
LT_INIT([disable-shared])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile lib/Makefile src/Makefile po/Makefile.in])
AC_OUTPUT
